src/objects/Global_Metric_Graph__c.object
<CustomObject>
    <label>Global Metric Graphs</label>
    <nameField>
        <label>Graph Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Metric Graph</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Graph_Value_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Graph Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graph_Value_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Graph Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graph_Value_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Graph Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Helper_Date__c</fullName>
        <label>Helper Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X_Text__c</fullName>
        <label>X Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>